--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,11 @@
     "paper-item": "^1.2.2",
     "paper-menu": "^1.3.0",
     "iron-dropdown": "^1.5.6",
-    "oe-input": "^1.0.0",
-    "oe-ajax": "^1.0.0",
-    "oe-field-behavior": "^1.0.0",
+    "oe-input": "http://evgit/oecloud.io/oe-input.git#master",
+    "oe-ajax": "http://evgit/oecloud.io/oe-ajax.git#master",
+    "oe-field-behavior": "http://evgit/oecloud.io/oe-field-behavior.git#master",
     "paper-input": "^1.1.24",
-    "oe-i18n-msg": "^1.0.0"
+    "oe-i18n-msg": "http://evgit/oecloud.io/oe-i18n-msg.git#master"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
@@ -20,5 +20,9 @@
     "fakerest": "^2.0.0",
     "iron-test-helpers": "^1.4.1",
     "iron-image": "#1.2.6"
+  },
+  "resolutions": {
+    "oe-field-behavior": "master",
+    "oe-i18n-msg": "master"
   }
 }
